@@ -102,6 +102,10 @@
 
   - bigger messages area.
 
+  - enemy kills box bigger
+
+  - indicate team war stat below icon?
+
 - PROTOCOL
 
   - add pads to those structures not having them?
